refactor/test : AnalysisService.analyzeEmotion - Analysis 도메인 지식 추가 / 테스트 구현
Analysis
hasAllAnswer, isAlreadyAnalyzed 메서드 기능 및 테스트 구현